# CG-Project

./: .gitignore  .travis.yml  CMakeLists.txt  LoadShaders.cpp  main.cpp  run.sh  setUpCGStuff.cpp  testApp  testVec.cpp  valgrind-out.txt
examples/First_Program/: setUpCGStuff.cpp  setUpInputHandlers.cpp
examples/First_Running_Program/: setUpCGStuff.h  setUpInputHandlers.h
examples/First_Running_Program/geometry/: box.h
examples/First_Running_Program/material/: phong.h
examples/First_Running_Program/renderFunctions/: renderFunctions.h
examples/First_Running_Program/scene/: box.h  sphere.h
examples/Lighting_Example/: baseExample.h  setUpCGStuff.h  shadowExample.h
examples/Lighting_Example/animations/: bounceAround.h
examples/Lighting_Example/material/: phong.h
examples/Particle_System_Example/: setUpCGStuff.h  setUpInputHandlers.h
examples/Particle_System_Example/scene/: box.h  particles.h  sphere.h
examples/Texture_Example/: setUpCGStuff.h  setUpInputHandlers.h
examples/Texture_Example/animations/: animations.h  bounceAround.h
examples/Texture_Example/geometry/: box.h  sprites.h
examples/Texture_Example/material/: materials.h  phong.h
examples/Texture_Example/renderFunctions/: renderFunctions.h
examples/Texture_Example/scene/: box.h
examples/camera/: fpsCamera.h
glew/: CMakeLists.txt
include/: LoadShaders.h
include/mathematics/LinAlg/vector/: vector.h
include/mathematics/vector/: vector.h
includes/LoadShaders/: LoadShaders.cpp  LoadShaders.h
includes/framework/: CMakeLists.txt
includes/framework/OpenGL/: CMakeLists.txt
includes/framework/OpenGL/geometry/: OpenGLGeometry.cpp  OpenGLGeometry.h
includes/framework/OpenGL/geometry/boxGeometry/: OpenGLBoxGeometry.cpp  OpenGLBoxGeometry.h
includes/framework/OpenGL/geometry/sphereGeometry/: OpenGLSphereGeometry.cpp  OpenGLSphereGeometry.h
includes/framework/OpenGL/material/: OpenGLMaterial.cpp  OpenGLMaterial.h
includes/framework/OpenGL/mesh/: OpenGLMesh.cpp  OpenGLMesh.h
includes/framework/OpenGL/renderer/: renderer.cpp  renderer.h
includes/framework/OpenGL/scene/: OpenGLScene.cpp  OpenGLScene.h
includes/framework/OpenGL/shader/: shader.cpp  shader.h
includes/framework/OpenGL/texture/: OpenGLTexture.cpp  OpenGLTexture.h
includes/framework/core/: CMakeLists.txt  face.h
includes/framework/core/Mesh/: mesh.cpp  mesh.h
includes/framework/core/camera/: camera.cpp  camera.h
includes/framework/core/color/: color.h
includes/framework/core/face/: face.cpp  face.h
includes/framework/core/face/test/: faceTest.cpp
includes/framework/core/geometry/: geometry.cpp  geometry.h
includes/framework/core/geometry/boxGeometry/: boxGeometry.cpp  boxGeometry.h
includes/framework/core/geometry/sphereGeometry/: sphereGeometry.cpp  sphereGeometry.h
includes/framework/core/geometry/test/: geometryTest.cpp
includes/framework/core/light/: light.cpp  light.h
includes/framework/core/light/pointLight/: pointLight.cpp  pointLight.h
includes/framework/core/light/spotLight/: spotLight.cpp  spotLight.h
includes/framework/core/material/: material.cpp  material.h
includes/framework/core/math/: math.cpp  math.h
includes/framework/core/math/quaternion/: quaternion.cpp  quaternion.h
includes/framework/core/math/test/: mathTest.cpp
includes/framework/core/mesh/: baseMesh.cpp  mesh.cpp  mesh.h
includes/framework/core/object3D/: object3D.cpp  object3D.h
includes/framework/core/object3D/test/: object3DTest.cpp
includes/framework/core/renderer/: renderer.cpp  renderer.h
includes/framework/core/scene/: baseScene.cpp  scene.cpp  scene.h
includes/framework/core/shader/: shader.cpp  shader.h
includes/framework/math/: math.cpp  math.h
includes/framework/math/quaternion/: quaternion.cpp  quaternion.h
includes/helpers/: CMakeLists.txt
includes/helpers/fileHandling/: fileHandler.cpp  fileHandler.h
includes/mathematics/: CMakeLists.txt
includes/mathematics/LinAlg/matrix/: matrix.h
includes/mathematics/LinAlg/matrix/test/: matTest.cpp
includes/mathematics/LinAlg/vector/: vector.h
includes/mathematics/LinAlg/vector/test/: testVec.cpp  vecTest.cpp
includes/mathematics/util/: CMakeLists.txt  util.cpp  util.h
media/shaders/: triangles.vert
media/shaders/baseShader/: triangles.frag
media/shaders/envMap/: envMap.frag  envMap.vert
media/shaders/lighting/: lighting.frag  lighting.vert
media/shaders/phongShader/: phong.frag  phong.vert  triangles.frag
media/shaders/phongTransformFeedback/: particle.frag  particle.vert
media/shaders/phongTransfromFeedback/: particle.vert  phong.frag  phong.vert
media/shaders/shadowPass/: shadow.frag  shadow.vert
media/shaders/skyBox/: skyBox.frag  skyBox.vert
media/shaders/sprite/: sprite.frag  sprite.vert
media/shaders/texturePhong/: phong.frag  phong.vert
stb/: CMakeLists.txt  stb_image.h
