CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
project(TestProject)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

SOURCE_GROUP( "Header Files" REGULAR_EXPRESSION "$^" )
SOURCE_GROUP( "Source Files" REGULAR_EXPRESSION "$^" )
SOURCE_GROUP( "Generated" REGULAR_EXPRESSION "ui_|qrc_|moc_.+cpp$" )

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

FIND_PACKAGE( OpenGL )
FIND_PACKAGE( glfw3 3.2 REQUIRED )
SET(INCLUDE_DIR "include")
SET( GLEW_INCLUDE_DIR "./glew" )
INCLUDE_DIRECTORIES( ${INCLUDE_DIR} ${GLEW_INCLUDE_DIR} )
SET( project_INCLUDES
    ${INCLUDE_DIR}/LoadShaders.h
    )
SET(Project_SOURCES glew.c LoadShaders.cpp  )
add_library(project ${Project_SOURCES})

SET(app_SOURCES main.cpp)

ADD_EXECUTABLE( testApp ${app_SOURCES} )
TARGET_LINK_LIBRARIES( testApp ${OPENGL_LIBRARIES} glfw project )
