include_directories(
    .
    ../mathematics
    ../../glew
)

add_library(CG_Framework
    ./math/math.cpp
    ./math/quaternion/quaternion.cpp
    core/face/face.cpp
    core/geometry/geometry.cpp
    core/material/material.cpp
    core/object3D/object3D.cpp
    core/mesh/mesh.cpp
    core/scene/scene.cpp
    core/camera/camera.cpp
    core/geometry/sphereGeometry/sphereGeometry.cpp
    OpenGL/shader/shader.cpp
    OpenGL/material/OpenGLMaterial.cpp
    OpenGL/geometry/OpenGLGeometry.cpp
    OpenGL/geometry/sphereGeometry/OpenGLSphereGeometry.cpp
    OpenGL/renderer/renderer.cpp
)

set(TEST_FILES
    ${TEST_FILES}
    ${CMAKE_CURRENT_SOURCE_DIR}/core/face/test/faceTest.cpp
    PARENT_SCOPE
)