include_directories(
    .
    ../mathematics
    ../../glew
)

add_library(CG_Framework
    ./math/math.cpp
    ./math/quaternion/quaternion.cpp
    core/face/face.cpp
    core/geometry/geometry.cpp
    core/material/material.cpp
    core/object3D/object3D.cpp
    core/mesh/baseMesh.cpp
    core/scene/baseScene.cpp
    core/camera/camera.cpp
    core/geometry/sphereGeometry/sphereGeometry.cpp
    core/geometry/boxGeometry/boxGeometry.cpp
    OpenGL/shader/shader.cpp
    OpenGL/material/OpenGLMaterial.cpp
    OpenGL/geometry/OpenGLGeometry.cpp
    OpenGL/geometry/sphereGeometry/OpenGLSphereGeometry.cpp
    OpenGL/geometry/boxGeometry/OpenGLBoxGeometry.cpp
    OpenGL/renderer/renderer.cpp
    OpenGL/mesh/OpenGLMesh.cpp
    OpenGL/scene/OpenGLScene.cpp
)

set(TEST_FILES
    ${TEST_FILES}
    ${CMAKE_CURRENT_SOURCE_DIR}/core/face/test/faceTest.cpp
    PARENT_SCOPE
)